# himu

./: CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  vcpkg-configuration.json  vcpkg.json
sources/apps/example/: CMakeLists.txt
sources/apps/example/src/: main.cpp
sources/mylib/: CMakeLists.txt
